2011-04-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Quiesce for a bit after stopping backends.
 - Don't wait after create_database; latency covered by build.
2011-04-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Don't break if start-stop-daemon has no work to do.
 - Remove pidfile after stopping a backend.
2011-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Complete rewrite.  Faster, cleaner.
2011-04-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Fixed some warnings in clang++ (fatal with -Werror).
2011-04-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Workaround for "noreturn" attribute in clang++ 2.8.
 src/pipeline.cxx:
 - Cosmetic: std-qualify throw spec.
2011-03-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/binarystring.hxx,
 include/pqxx/compiler-public.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/except.hxx, include/pqxx/largeobject.hxx,
 include/pqxx/pipeline.hxx, include/pqxx/result.hxx, include/pqxx/strconv.hxx,
 src/connection_base.cxx, src/except.cxx, test/test_main.hxx:
 - Support for gcc "pure" and "const" attributes.
 - Marked some functions with the "pure" and "const" attributes.
 - A bit more of the "noreturn" attribute.
2011-03-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/compiler-internal.hxx,
 test/unit/test_escape.cxx:
 - Minor changes for gcc 4.6.0.
2011-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, include/pqxx/largeobject.hxx,
 include/pqxx/result.hcxx, test/test000.cxx, test/test049.cxx,
 test/test050.cxx, test/test051.cxx, test/test053.cxx, test/test055.cxx,
 test/test061.cxx, test/test062.cxx, test/test082.cxx, test/test084.cxx,
 test/test093.cxx, test/unit/test_prepared_statement.cxx:
 - More clang fixes.
2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for GNU-style strerror_r.
 src/util.cxx: