@@ -9,6 +9,8 @@
  - On Windows, now uses ws2_32 instead of wsock32.
  - Various Windows build fixes.
  - Updated for gcc 4.6.0.
+ - configure script supports --enable-documentation/--disable-documentation.
+ - All new, faster pqxx-fulltest script.
 3.1
  - Shared libraries are now versioned by ABI: 3.1 instead of 3.1.0 etc.
  - Threading behaviour is now documented, and can be queried.
